# ParallelDo

./: .gitignore  CMakeLists.txt  batch_processor.h  bench.cpp  continuous_stream.h  deadlock_detecting_thread_processor.h  parallel_for_each.hpp  test.cc  thread_processor.h  thread_processor.hpp  thread_processor_interface.hpp
